# Sketches

./: .gitignore  Cargo.toml  README.md
000_nannou_template/: Cargo.toml
S000_nannou_shader_template/: Cargo.toml
S000_nannou_shader_template/src/: main.rs
S000_nannou_sketch_template/: Cargo.toml
S000_nannou_template/: Cargo.toml
S000_shadertoy_template/: README.md  coordinate.frag
S001_grid/: README.md  grid_.frag  grid_random_1d.frag  grid_random_2d_.frag  grid_random_2d_smooth_by_time.frag
S002_slider/: README.md  slider_.frag  slider_grid_random_dir_2d_.frag  slider_sin.frag
S003_circle_metaball/: README.md  circle_.frag  metaball_.frag  metaball_sharp.frag
S004_circles_blend/: README.md  circles.frag  circles_blend.frag  circles_blend_add.frag  circles_blend_diff.frag  circles_blend_mul.frag  circles_eye.frag
S005_mask/: README.md  mask.frag  mask_circles.frag
S006_colors/: README.md  colors_grid.frag  colors_rect.frag
S007_shapes_2d_distance_field/: README.md  lines_2d_distance_field.frag  shapes_2d_distance_field_.frag  shapes_2d_distance_field_morphing.frag  waves_2d_distance_field.frag
S008_pattern_checker/: README.md  pattern_checker.frag
S009_mask2/: README.md  masks.frag
S010_grid_lines/: README.md  grid_line_overhang_alpha.frag  grid_lines.frag  grid_lines_overhang.frag
S011_grid_circles/: README.md  grid_circle_alpha_mouse.frag  grid_circle_alpha_random.frag
S012_grid_circles2/: README.md  grid_circle_move_random.frag  grid_circle_zoom.frag  grid_metaball.frag
S013_fold_kaleidoscope/: README.md  fold_.frag  fold_kaleidoscope.frag
S014_raymarch_sphere/: README.md  raymarch_sphere.frag  raymarch_sphere_repeat.frag
S015_raymarch_primitives/: README.md  raymarch_box_repeat.frag  raymarch_torus.frag  raymarch_torus_plane.frag
S016_raymarch_transform/: README.md  raymarch_primitive_boolean.frag  raymarch_primitive_rotate.frag  raymarch_primitive_twist.frag
S017_raymarch_texture/: README.md  raymarch_tex_generate.frag
S018_raymarch_soft_shadow/: README.md  raymarch_soft_shadow.frag
S019_lights/: README.md  light_ads.frag
glsl_utils/: _example_sdf2.frag  _example_shaping_func.frag  color_space.glsl  coord.frag  mask.frag  math.glsl  op2d.frag  op3d.frag  pattern.frag  random.glsl  sdf2d.frag  sdf3d.frag  shaping_funcs.glsl  transform2d.glsl
s000_nannou_shader_template/: Cargo.toml
s000_nannou_sketch_template/: Cargo.toml
s020_wgpu_shadow_example/: Cargo.toml  README.md
s021_wgpu_cube_example/: Cargo.toml  README.md
s022_wgpu_texture_camera/: Cargo.toml  README.md
s023_wgpu_instancing/: Cargo.toml  README.md  build.rs
s024_wgpu_depth_buffer/: Cargo.toml  README.md
s025_wgpu_obj_loader/: Cargo.toml  README.md  build.rs
s026_wgpu_lights_phong/: Cargo.toml  README.md  build.rs
s027_wgpu_lights_phong_view_space/: Cargo.toml  README.md  build.rs
s028_wgpu_normal_map/: Cargo.toml  build.rs
s029_wgpu_better_camera/: Cargo.toml
s029_wgpu_better_camera/shaders/: shader.frag
s029_wgpu_better_camera/src/: main.rs  pass.rs
s029_wgpu_better_camera/src/renderer/: buffer.rs  camera.rs  geom.rs
s030_wgpu_threading_rayon/: Cargo.toml  build.rs
s031_wgpu_offline_rendering/: Cargo.toml  README.md
s031_wgpu_offline_rendering/shaders/: shader.vert
s031_wgpu_offline_rendering/src/: main.rs
s031_wgpu_offline_rendering/src/renderer/: geom.rs
s032_wgpu_offline_rendering_gif/: Cargo.toml
(+183 files in other folders)
