[package]
name = "Sketches"
version = "0.1.0"
authors = ["Hideaki Tai <hideaki.tai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"

 [workspace]
members = [
    "s000_nannou_sketch_template",
    "s000_nannou_shader_template",
    "s020_wgpu_shadow_example",
]
