[package]
name = "Sketches"
version = "0.1.0"
authors = ["Hideaki Tai <hideaki.tai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"
image = "0.23"
anyhow = "1.0"

[workspace]
members = [
  "s000_nannou_sketch_template",
  "s000_nannou_shader_template",
  "s020_wgpu_shadow_example",
  "s021_wgpu_cube_example",
  "s022_wgpu_texture_camera",
  "s023_wgpu_instancing",
  "s024_wgpu_depth_buffer",
  "s025_wgpu_obj_loader",
  "s026_wgpu_lights_phong",
  "s027_wgpu_lights_phong_view_space",
  "s028_wgpu_normal_map",
  "s029_wgpu_better_camera",
  "s030_wgpu_threading_rayon",
  "s031_wgpu_offline_rendering",
  "s032_wgpu_offline_rendering_gif",
  "s033_wgpu_compute_tangents",
]
